# panther_driver

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  compose.yaml  install_notes  package.xml  ros_entrypoint.sh
.github/workflows/: build-docker-image.yaml
config/: apriltags_settings.yaml  apriltags_tags.yaml
demo/: README.md  compose.panther.ros2.yaml  compose.panther.yaml  compose.pc.yaml
demo/config/: nav2_params_panther.yaml  panther.rviz  panther_ekf_params.yaml  slam_toolbox_panther.yaml
demo/nav2/: docker-compose.pc.yaml  docker-compose.yaml
demo/nav2/ekf_docker/: Dockerfile  ekf.launch
docker/: compose.yaml
docs/: README.md
docs/drawio/: panther_docker_setup.drawio  panther_non_docker_setup.drawio
examples/panther_robot/: docker-compose.yaml
include/: DockingController.h  StateMachine.hpp  VelocityManager.hpp
launch/: apriltag.launch  docking.launch  docking_gazebo.launch  driver.launch  driver_omni.launch  joy_mecanum.launch  panther_driver.launch  phidgets_imu.launch  rap.launch  webui.launch
msg/: PantherDriverStatus.msg
panther_driver/: CMakeLists.txt  Dockerfile  README.md  package.xml  ros_entrypoint.sh
panther_driver/launch/: battery.launch  driver.launch  ekf.launch  imu.launch  panther_driver.launch  phidgets_imu.launch  webui.launch
panther_driver/panther_driver/: package.xml
panther_driver/panther_driver/launch/: driver.launch  joy_mecanum.launch  panther_driver.launch  rap.launch
panther_driver/panther_driver/src/: ClassicKinematics.py
panther_driver/params/: costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  joy_teleop.yaml  joystick.yaml  local_costmap_params.yaml  measurements.yaml  panther.yaml
panther_driver/scripts/: read_adc_iio.py  set_driver_startup.py  update_startup.sh
panther_driver/src/: ClassicKinematics.py  MecanumKinematics.py  MixedKinematics.py  PantherKinematics.py  battery_node.py  constants.py  driver_node.py  hardware_node.py  panther_can.py  panther_hardware.py  panther_kineatics.py  panther_kinematics.py  pinout.py  powerboard_client.py
panther_driver/src/panther_driver/: velocity_manager_node.cxx
panther_driver/system_config/: can_setup.sh  rap.sh
panther_driver/test/: VelocityManagerTest.cxx
panther_system_setup/can/: panther_can_setup.service  panther_can_setup.sh  setup_service.sh
panther_system_setup/eeprom/: README.md  flash_eeprom.sh  setup_upstart.sh
panther_system_setup/eeprom/scripts/: config_loading.py  generate_eeprom_file.py  install_eepromutils.sh  load_env_on_boot.sh  panther_eeprom_config.service
panther_system_setup/powerboard/: panther_powerboard.service  setup_service.sh
panther_system_setup/powerboard/old/: setup.sh  watchdog.out
params/: costmap_common_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
powerboard_rpi/: README.md  power_gpio.py  setup_service.sh  soft_stop.service
powerboard_rpi/old/: boot.conf
scripts/: set_driver_startup.py  update_startup_omni.sh
src/: DockingController.cpp  MecanumKinematics.py  MixedKinematics.py  PantherKinematics.py  docking_node.cpp  driver.py  driver_mix.py  driver_node.py  driver_omni  driver_omni.py  panther_driver.py
src/panther_driver/: VelocityManager.cxx  velocity_manager_node.cxx
system_config/: can_setup.sh  launch_driver.service  launch_driver.sh  launch_driver_omni.service  launch_driver_omni.sh  rap.service
test/: CMakeLists.txt  VelocityManagerTest.cxx
velocity_manager/: Dockerfile  README.md
velocity_manager/velocity_manager/: CMakeLists.txt  package.xml
velocity_manager/velocity_manager/include/: VelocityManager.hpp
