<?xml version="1.0"?>
<package format="2">
  <name>panther_driver</name>
  <version>0.0.0</version>
  <description>The panther_driver package</description>

  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <license>MIT</license>

  <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>