<?xml version="1.0"?>
<package format="2">
  <name>panther_driver</name>
  <version>1.0.0</version>
  <description>The panther_driver package</description>
  <maintainer email="adam.krawczyk@husarion.com">Adam Krawczyk</maintainer>
  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/panther_driver</url> -->

  <author email="adam.krawczyk@husarion.com">Adam Krawczyk</author>
  <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <export> </export>
</package>
